--- a/style.css
+++ b/style.css
@@ -2,12 +2,31 @@ body {
     height: auto;
     width: 100%;
     font-family: 'Roboto', sans-serif;
-    /* background-image: url(golf_background_image.png);
+    background-image: url(golf_background_image.png);
     background-repeat: no-repeat; 
-    background-size: cover;  */
+    background-size: cover; 
 }
 
 
 h1 {
     text-align: center;
+    margin-top: 50px;
+    color: white;
+}
+
+h2 {
+    text-align: center;
+    margin-top: 50px;
+    color: white;
+
+}
+
+.card-container{
+    display: flex;
+    justify-content: center;
+   
+}
+
+.course-select{
+   padding: 20px;
 }
