implemented first modal

--- a/style.css
+++ b/style.css
@@ -18,12 +18,26 @@ h2 {
     text-align: center;
     margin-top: 50px;
     color: white;
+}
 
+h5{
+    background-color: white;
+    text-align: center
+}
+
+.modal-title {
+    text-align: center;
+    background-color: white;
+
+}
+
+.modal-body{
+    background-color: #dadfea
 }
 
 .card-container{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
    
 }
 
