--- a/style.css
+++ b/style.css
@@ -32,13 +32,13 @@ h5{
 }
 
 .modal-body{
-    background-color: #dadfea
+    background-color: #caf9d6
 }
-
 .card-container{
     display: flex;
     justify-content: space-between;
-   
+    flex-wrap: wrap;
+
 }
 
 .course-select{
