number validation implemented

--- a/style.css
+++ b/style.css
@@ -110,3 +110,9 @@ input{
 .btn {
     max-width: 100px;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
