--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
-    height: auto;
+    /*height: auto;*/
     width: 100%;
     font-family: 'Roboto', sans-serif;
     background-image: url(golf_background_image.png);
     background-repeat: no-repeat;
     background-size: cover;
+    min-height: 600px;
 }
 
 
@@ -61,6 +62,8 @@ h5 {
     text-align: center;
     font-weight: bold;
     font-size: 30px;
+    background-color: darkolivegreen;
+    border: 1px solid black;
 }
 
 #par {
