--- a/style.css
+++ b/style.css
@@ -50,8 +50,8 @@ h5 {
 }
 
 .scorecard-container {
-    background-color: white;
-    border: 1px solid black;
+    background-color: transparent;
+    /*border: 1px solid black;*/
     position: absolute;
     top: 40%;
     width: auto;
@@ -85,7 +85,7 @@ h5 {
 
 .title {
     font-weight: bold;
-    /*background-color: cornflowerblue;*/
+    background-color: white;
     width: 80px;
     padding-left: 3px;
 }
@@ -125,4 +125,12 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
+}
+
+.finalBtn{
+    right: 0;
+    position: fixed;
+    background-color: darkolivegreen !important;
+    color: black !important;
+
 }
