--- a/style.css
+++ b/style.css
@@ -134,3 +134,7 @@ input[type=number]::-webkit-outer-spin-button {
     color: black !important;
 
 }
+
+.btn-success{
+    background-color: darkolivegreen !important;
+}
