work on player names

--- a/style.css
+++ b/style.css
@@ -135,6 +135,6 @@ input[type=number]::-webkit-outer-spin-button {
 
 }
 
-.btn-success{
+.btn-dark{
     background-color: darkolivegreen !important;
 }
