--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ h5 {
 .modal-title {
     text-align: center;
     background-color: white;
+    margin: 0 auto;
 }
 
 .modal-body {
@@ -137,4 +138,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 .btn-dark{
     background-color: darkolivegreen !important;
+}
+
+.playerBtn{
+    height: 40px !important;
 }
