--- a/style.css
+++ b/style.css
@@ -143,3 +143,7 @@ input[type=number]::-webkit-outer-spin-button {
 .playerBtn{
     height: 40px !important;
 }
+
+.close{
+    margin: 0 !important;
+}
