--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h5 {
 }
 
 .modal-body {
-    background-color: #dadfea
+    background-color: darkolivegreen
 }
 
 .card-container {
@@ -87,13 +87,10 @@ h5 {
 .title {
     font-weight: bold;
     background-color: white;
-    width: 80px;
+    width: 105px;
     padding-left: 3px;
 }
 
-input {
-    /*width: 100px;*/
-}
 
 .col-sm {
     text-align: center;
@@ -142,8 +139,27 @@ input[type=number]::-webkit-outer-spin-button {
 
 .playerBtn{
     height: 40px !important;
+    background-color: white !important;
+    color: darkolivegreen !important;
+    font-weight: bold;
 }
 
 .close{
     margin: 0 !important;
+}
+
+label{
+    color: white;
+}
+
+.modal-footer{
+    border-top: none !important;
+}
+
+.bg-info{
+    background-color: #689e1d !important;
+}
+
+.finalScoreCard{
+    max-width: 200px;
 }
